--- a/DocToHtml/DocToHtml.csproj
+++ b/DocToHtml/DocToHtml.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="sautinsoft.document" Version="5.0.10.23" />
     <PackageReference Include="sautinsoft.rtftohtml" Version="7.4.5.25" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="18.3.0.47" />
