--- a/DocToHtml/DocToHtml.csproj
+++ b/DocToHtml/DocToHtml.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="sautinsoft.rtftohtml" Version="7.4.5.25" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="Syncfusion.DocIO.Net.Core" Version="18.3.0.47" />
+    <PackageReference Include="Syncfusion.Licensing" Version="18.3.0.47" />
   </ItemGroup>
 
   <ItemGroup>
